--- a/doc/context/sources/general/manuals/luametatex/luametatex.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex.tex
@@ -20,7 +20,7 @@
 % mkxl run stats  > tex properties: 938218 hash slots used of 2097152, 57142 control sequences, approximate memory usage: 127 MB
 % mkxl run stats  > tex properties: 495850 hash slots used of 2097152, 57142 control sequences, approximate memory usage: 127 MB
 
-\unprotect
+% \unprotect
 
 % noattributes as box
 
@@ -30,7 +30,7 @@
 %    \global\setbox\visualizerbox\hpack{\visualizerfont#1}%
 %    \endgroup}
 
-\protect
+% \protect
 
 \enableexperiments[optimize.typesetting.char]
 \enableexperiments[optimize.spacing.profile]
