--- a/tex/context/sample/common/samples.tex
+++ b/tex/context/sample/common/samples.tex
@@ -68,6 +68,7 @@ used in testing bibliographic references and citations.
                                                      bicameral mind,
                                                      Houghton Mifflin, Princeton, 1976 \NC \NR
 \NC zelensky.tex       \NC Volodymyr Zelensky    \NC \hyphenatedurl{https://graciousquotes.com/volodymyr-zelensky/} \NC \NR
+\NC tchaikovsky.tex    \NC Adian Tchaikovsky     \NC Shroud \NC \NR
 \stoptabulate
 
 % Tufte: This quote will always produce hyphenated text, apart from the content,
