--- a/doc/context/sources/general/manuals/luametatex/luametatex-primitives.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-primitives.tex
@@ -8208,12 +8208,12 @@ This variable registers the first applied math class in a formula.
 
 \stopnewprimitive
 
-\startnewprimitive[title={\prm {lastlinecount}}]
+% \startnewprimitive[title={\prm {lastlinecount}}]
 
-This state variable holds the most recent number of lines in a paragraph broken
-into lines.
+% This state variable holds the most recent number of lines in a paragraph broken
+% into lines.
 
-\stopnewprimitive
+% \stopnewprimitive
 
 \startoldprimitive[title={\prm {lastlinefit}}]
 
@@ -8223,12 +8223,12 @@ previous line. Basically it counters the strong push of a \prm {parfillskip}.
 
 \stopoldprimitive
 
-\startnewprimitive[title={\prm {lastlinewidth}}]
+% \startnewprimitive[title={\prm {lastlinewidth}}]
 
-This state variable holds the width of the last line in the most recently
-paragraph broken into lines.
+% This state variable holds the width of the last line in the most recently
+% paragraph broken into lines.
 
-\stopnewprimitive
+% \stopnewprimitive
 
 \startnewprimitive[title={\prm {lastloopiterator}}]
 
